# dream-ai

./: .replit  main.py  pyproject.toml  replit.md
attached_assets/: DREAM_AI_PERSONNAGES_COMPLET_1768857848045.py  Pasted--DREAM-AI-FICHIER-PERSONNAGES-ET-S-1768859103936_1768859103936.txt  Pasted--PARTIE-3-PERSONNAGES-JAPON--1768859184123_1768859184125.txt  Pasted--thuy-name-Thuy-age-22-age-slider-22-location--17688619_1768861997153.txt  Pasted-5-ADD-15-MORE-WORLDWIDE-PROFILES-with-detailed-bios-Aal_1768599810918.txt  Pasted-Add-25-more-extremely-diverse-profiles-WORKING-CLASS-PO_1768617014681.txt  Pasted-Add-profiles-MIDDLE-EAST-Lara-age-27-country-Lebanon-Be_1768644054559.txt  Pasted-Add-profiles-RUSSIA-Olga-age-38-country-Russia-Moscow-j_1768643231025.txt  Pasted-Major-app-upgrade-1-BOTTOM-NAVIGATION-BAR-like-real-dat_1768599150230.txt  Pasted-import-os-import-json-import-requests-import-bcrypt-imp_1768700781638.txt  dream_ai_personnages_complet_1768858537324.py  main_(5)_1768834368400.py  main_(6)_1768836807181.py
static/: main_complete.py  main_part1.py  main_part1.py.txt  main_part2.py  main_part2.py.txt  main_part3.py  main_part3.py.txt  main_part4.py  main_part4.py.txt  requirements.txt
static/css/: style.css
static/js/: app.js
templates/: chat.html  index.html  profile.html
